--- a/style.css
+++ b/style.css
@@ -3,3 +3,43 @@ Header background - #FFDBAA
 button - #805215
 Header Text - #553100
 Main background - #D4A76A*/
+
+header {
+  background-color: #FFDBAA;
+}
+
+.banner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.company-name {
+  color: #553100;
+}
+
+.navigation ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.navigation ul li {
+  display: inline;
+  margin-right: 10px;
+}
+
+.navigation ul li a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #805215;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 0;
+}
+
+/* Apply the background color to the rest of the page */
+main {
+  background-color: #D4A76A;
+}
